fix career position mobile

--- a/app/assets/stylesheets/career.scss
+++ b/app/assets/stylesheets/career.scss
@@ -332,6 +332,7 @@ video {
 
   .position-details {
     color: rgb(136,136,136);
+    margin-top: -30px;
     .title{
       font-size: 18px;
       color: rgb(51, 51, 51);
@@ -438,6 +439,19 @@ video {
           display: none;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .features.features-position {
+    .desc {
+      font-size: 14px;
+    }
+
+    h2.title {
+      font-size: 18px;
+      margin: 15px 0;
     }
   }
 }
